--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="html,css,cours,Gor">
     <meta name="description" content="здесь мы изучаем html">
     <title>Гор Мкртчян</title>
-    <link rel="stylesheet" href="selector.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="cont">
